Finalizando o CSS do projeto

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles.css">
+
     <title>FP Sellection</title>
 </head>
 <body>
@@ -33,12 +38,12 @@
                         blanditiis vitae esse sint! Repellat possimus alias 
                         minus expedita.
                     </p>
-                    <button>Saiba Mais</button>
+                    <button class="information">Saiba Mais</button>
                 </div>
             </div>
         </div>
 
-        <div class="arrow">
+        <div class="arrows">
             <button><img src="./img/arrow.png" alt="Seta esquerda"></button>
             <button><img src="./img/arrow.png" alt="Seta direita"></button>
         </div>
