--- a/index.html
+++ b/index.html
@@ -23,14 +23,50 @@
     </header>
 
     <section>
-        <div class="list">
-            <div class="item">
+        <div class="list"> 
+            <div class="item active">
                 <div class="car-img">
-                    <img src="./img/2.png" alt="Imagem de um carro prata">
+                    <img src="./img/1.png" alt="Imagem de um carro prata">
                 </div>
                 <div class="content">
                     <p class="car-information">Único Dono</p>
+                    <h2>911 Turbo</h2>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Voluptate pariatur nobis nemo saepe quo, repellendus, 
+                        numquam accusamus distinctio, odit consequuntur eius 
+                        blanditiis vitae esse sint! Repellat possimus alias 
+                        minus expedita.
+                    </p>
+                    <button class="information">Saiba Mais</button>
+                </div>
+            </div>
+
+            <div class="item">
+                <div class="car-img">
+                    <img src="./img/2.png" alt="Imagem de um carro vermelho">
+                </div>
+                <div class="content">
+                    <p class="car-information">Conversível</p>
                     <h2>Ferrari</h2>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Voluptate pariatur nobis nemo saepe quo, repellendus, 
+                        numquam accusamus distinctio, odit consequuntur eius 
+                        blanditiis vitae esse sint! Repellat possimus alias 
+                        minus expedita.
+                    </p>
+                    <button class="information">Saiba Mais</button>
+                </div>
+            </div>
+
+            <div class="item">
+                <div class="car-img">
+                    <img src="./img/3.png" alt="Imagem de um carro amarelo">
+                </div>
+                <div class="content">
+                    <p class="car-information">2015</p>
+                    <h2>Lamborghini</h2>
                     <p class="description">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                         Voluptate pariatur nobis nemo saepe quo, repellendus, 
