Finalizando o javascript da aplicação

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
 
-    <section>
+    <section class="container">
         <div class="list"> 
             <div class="item active">
                 <div class="car-img">
@@ -80,8 +80,8 @@
         </div>
 
         <div class="arrows">
-            <button><img src="./img/arrow.png" alt="Seta esquerda"></button>
-            <button><img src="./img/arrow.png" alt="Seta direita"></button>
+            <button id="prev"><img src="./img/arrow.png" alt="Seta esquerda"></button>
+            <button id="next"><img src="./img/arrow.png" alt="Seta direita"></button>
         </div>
 
         <div class="indicators">
@@ -93,5 +93,7 @@
             </ul>
         </div>
     </section>
+
+    <script src="./scripts.js"></script>
 </body>
 </html>
